--- a/jwt-parent/pom.xml
+++ b/jwt-parent/pom.xml
@@ -2,12 +2,53 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!-- 1、添加父工程依赖-->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.4.RELEASE</version>
+    </parent>
+    <!-- 2、跳过测试-->
+    <properties>
+        <skipTests>true</skipTests>
+    </properties>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kjisi</groupId>
     <artifactId>jwt-parent</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>jwt-gateway</module>
+        <module>jwt-eureka</module>
+        <module>jwt-common</module>
+        <module>jwt-common-db</module>
+        <module>jwt-service</module>
+        <module>jwt-service-api</module>
+        <module>jwt-web</module>
+    </modules>
 
+    <!-- 3、添加测试依赖 -->
+    <dependencies>
+        <!-- 1、测试包 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
+    <!-- 4、添加spring-cloud 版本管理 -->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Greenwich.SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
